<resources>
    <string name="app_name">House Rent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="say_hello_to_your_app">Say Hello to your app</string>
    <string name="find_your_perfect_car_with_our_dealership_app">Find your perfect car with our dealership app</string>
    <string name="e_mail">E-mail</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_don_t_have_an_account_click_below">If you don\'t have an account?Click Below</string>
    <string name="login">Login</string>
    <string name="explore">Explore</string>
    <string name="new_car_collection">New Car Collection</string>
    <string name="landMarks">Transmission</string>
    <string name="overlooking">Mileage</string>
    <string name="rentalValue">Color</string>
    <string name="body_type">Body Type</string>
    <string name="color">Year</string>
    <string name="description">Make</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="car_details">Car Details</string>
    <string name="houseName">Model</string>
    <string name="owner_details">Owner Details</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="more">More</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="year">Year</string>
    <string name="mileage">Mileage</string>
    <string name="transmission">Transmission</string>
    <string name="add_to_wishlist">Add to WishList</string>
    <string name="remove_from_wish_list">Remove from WishList</string>
</resources>
