<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HouseDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/iv_car_image"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <Button
                android:id="@+id/btn_add_to_wish_list"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_to_wishlist"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Electric Car"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Tesla, Inc., is an American electric vehicle and  clean energy company based ,
 California. The company specializes I bdbdbhjsgdhjgashajhdjhasdjhasdjahsdas
 n electric vehicle manufacturing, "
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/car_details"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transmission"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_transmission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorWhite"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mileage"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"

                    android:textColor="@color/colorWhite"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorWhite"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_type"

                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_body_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"

                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorWhite"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorWhite"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/make"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_make"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorWhite"

                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel_type"

                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_fuel_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorWhite"

                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/colorWhite"

                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardMaxElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/owner_details"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />


                    <TextView
                        android:id="@+id/tv_owner_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:text="Rahul Singh"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_owner_name"
                        android:layout_marginTop="20dp"
                        android:text="@string/phone_number"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/tv_owner_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_owner_name"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="20dp"
                        android:text="343423432432"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_owner_phone_number"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/address"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/tv_owner_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_owner_phone_number"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="house 1185v22 Old sunny "
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_owner_address"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/email"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/tv_owner_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_owner_address"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/email"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>